# markd

./: .gitignore  Agents.md  Cargo.toml  README.md
src/: compiler.rs  config.rs  indexer.rs  lib.rs  main.rs  preview.rs  renderer.rs  template.rs  theme.rs  toolbar.rs  watcher.rs  workspace.rs
src/core/: markdown.rs  render.rs
src/io/: file.rs
src/ui/: main_window.rs
templates/: layout.html
theme/: style.css
