[package]
name = "markd"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", features = ["v3_24"] }
sourceview = "0.9"
pulldown-cmark = "0.10"
glib = "0.10"
gio = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.8"
rfd = "0.14"
tokio = { version = "1", features = ["full"] }