[package]
name = "markd"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
rfd = "0.14"
pulldown-cmark = "0.10"
syntect = "5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
indexmap = "2.1"
# For debouncing
futures-timer = "3.0"
futures = "0.3"
