[package]
name = "markd"
version = "0.1.0"
edition = "2021"
description = "Offline Markdown Note Compiler & Publisher"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = "0.10"
notify = "6.1"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
relative-path = "1.9"
fs_extra = "1.3"
slug = "0.1"
tantivy = "0.22"
